[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/narator.gd" type="Script" id=1]

[node name="Narator" type="Node2D" groups=["narator"]]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CursorTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="CursorTimer" to="." method="_on_CursorTimer_timeout"]
